--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "12.1.0",
     "next-pwa": "^5.4.6",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sweetalert2": "^11.7.6"
   },
   "devDependencies": {
     "eslint": "8.11.0",
